--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,1 +1,29 @@
-<p>product-detail works!</p>
+<div class="product-detail-container">
+  <button mat-icon-button [routerLink]="['/products']" class="back-button" aria-label="Voltar">
+    <span class="material-icons">arrow_back</span>
+  </button>
+
+  <div *ngIf="loading" class="loading">
+    <mat-spinner></mat-spinner>
+  </div>
+
+  <div *ngIf="error" class="error-message">
+    {{ error }}
+  </div>
+
+  <div *ngIf="!loading && product">
+    <div class="product-card">
+      <h3>{{ product.name }}</h3>
+      <p>{{ product.description }}</p>
+      <p class="price">Preço: {{ product.price | currency }}</p>
+      <div class="product-actions">
+        <button mat-icon-button (click)="deleteProduct()" aria-label="Eliminar Produto">
+          <span class="material-icons">delete</span>
+        </button>
+        <button mat-icon-button [routerLink]="['/edit', product.id]" aria-label="Editar Produto">
+          <span class="material-icons">edit</span>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
